# gene-core

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FINANCIAL_GENE.md  LICENSE  OBSERVER_GENE.md  README.md
gene-core/: Cargo.toml
gene-core/src/: ipc.rs  main.rs  tui.rs
gene-core/src/expression/: engine.rs  mod.rs
gene-core/src/pattern/: extractor.rs  index.rs  mod.rs  record.rs
gene-core/src/persistence/: codegen.rs  executor.rs  mod.rs  selfmod.rs  store.rs
gene-core/src/regulation/: action.rs  causal.rs  drive.rs  mod.rs  scorer.rs  selector.rs
gene-core/src/selfmodel/: evaluator.rs  meta.rs  mod.rs  model.rs
gene-core/src/signal/: bus.rs  flux.rs  ledger.rs  mod.rs  types.rs  world.rs
gene-core/src/symbol/: activation.rs  composition.rs  grounder.rs  ledger.rs  mod.rs
gene-ctl/: Cargo.toml
gene-ctl/src/: main.rs
