[package]
name = "gene-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gene"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }
sled = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
anyhow = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
ctrlc = "3"
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
